--- a/Accueil/accueil.html
+++ b/Accueil/accueil.html
@@ -9,23 +9,23 @@
 
 <body>
     <div>
-        <div id="haut_de_page">
+        <div class="header">
             <a href="accueil.html"><img src="images/logo.png" alt="logo BitStorm"></a>
             <h1 id="titre">BITSTORM</h1>
         </div>
-        <div id="selection_jeu">
-            <button>
+        <div class="game">
+            <button class="button_select">
                 <i class="glyphicon glyphicon-menu-left"></i>
             </button>
-            <img src="images/FlappyBird.png" alt="image jeu">
-            <button>
+            <img src="images/2048.png" alt="image jeu" class="game_choose">
+            <button class="button_select">
                 <i class="glyphicon glyphicon-menu-right"></i>
             </button>
         </div>
     </div>
 </body>
 
-<footer>
+<footer class="footer">
     <div class="footer-container">
         <div class="contact">
             <h3>Contact : bit.storm@bitstorm.ch</h3>
