--- a/Accueil/accueil.html
+++ b/Accueil/accueil.html
@@ -14,13 +14,18 @@
             <h1 id="titre">BITSTORM</h1>
         </div>
         <div class="game">
-            <button class="button_select">
-                <i class="glyphicon glyphicon-menu-left"></i>
-            </button>
-            <img src="images/2048.png" alt="image jeu" class="game_choose">
-            <button class="button_select">
-                <i class="glyphicon glyphicon-menu-right"></i>
-            </button>
+            <div class="game_container">
+                <h1 id="game_title">2048</h1>
+                <img src="images/2048.png" alt="image jeu" class="game_choose">
+                <div class="button_container">
+                    <button class="button_select">
+                        <i class="glyphicon glyphicon-menu-left"></i>
+                    </button>
+                    <button class="button_select">
+                        <i class="glyphicon glyphicon-menu-right"></i>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
