--- a/Accueil/accueilDetails.html
+++ b/Accueil/accueilDetails.html
@@ -13,6 +13,7 @@
 
 <body>
     <div>
+        <img id="logo" src="../Assets/logo.png">
         <div id="title-slider" class="container">
             <h1 id="title">Brique</h1>
         </div>
