--- a/Accueil/accueilDetailsSnake.html
+++ b/Accueil/accueilDetailsSnake.html
@@ -25,7 +25,7 @@
                 </div>
                 <div id="desc">
                     <h3>Description :</h3>
-                    <p>Amicorum iis ab ut supplicare quam acerbius causa multa in est patiuntur amicorum in Quam modum ut res iis faceremus numquam causa sit in causa animatus multaeque sunt in prorsus modum suis detrahique aliquem amicum non faceremus numquam illa ut potius sic quae nulli amicorum quae nostra causa in enim boni prima amicorum honeste insectarique in numquam sit animatus Nec se ut assentior quem quae nostris vera numquam illa causa multaeque assentior detrahunt quem amicorum trium suis in fruantur assentior sit sit numquam suis illa honestissime in amicorum in se in iis in quae in fiunt detrahunt nulli vehementius quae.</p>
+                    <p>Dans ce jeu, vous êtes un serpent affamé qui veut manger le plus possible! Mais attention, plus vous mangerez, plus vous grossirez, et plus vous grossirez, plus vos mouvement seront restreints...</p>
                 </div>
                 <div id="buttons">
                     <div id="upperButtons">
