--- a/dino/dino.html
+++ b/dino/dino.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<audio autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+</audio>
+
 <head>
     <meta charset="UTF-8">
     <title>Dino Game</title>
@@ -7,12 +11,13 @@
 </head>
 <body>
 <header>
+
     <div class="logo">
         <img src="texture/logo.png" alt="Popcorn Icon" class="logo-img">
     </div>
 
     <div class="home-button">
-        <button onclick="window.location.href='index_pageAccueil.html'">Accueil</button>
+        <button class="home-button" onclick="confirmGoHome()" style="padding: 15px 30px; font-size: 1.5em;">Accueil</button>
     </div>
 
 
