Feat : Rajout système de vie et de son affichage

--- a/dino/dino.html
+++ b/dino/dino.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="home-button">
-        <button class="home-button" onclick="confirmGoHome()" style="padding: 15px 30px; font-size: 1.5em;">Accueil</button>
+        <button class="home-button" onclick="goHome()" style="padding: 15px 30px; font-size: 1.5em;">Accueil</button>
     </div>
 
 
