--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -1,6 +1,11 @@
 
 <!DOCTYPE html>
 <html lang="en">
+ 
+<audio autoplay loop>
+  <source src="eterna-cancao-wav-12569.mp3" type="audio/mpeg">
+</audio>
+
 <head>
     <meta charset="UTF-8">
     <title>snake</title>
@@ -10,10 +15,7 @@
 </head>
 
 <body>
-  <!-- <audio controls autoplay>
-    <source src="horse.ogg" type="audio/ogg">
-    <source src="eterna-cancao-wav-12569.mp3" type="audio/mpeg">
-  </audio> -->
+
   <div style="height: 13vh;">
     <div>
       <img src="../Assets/logo.png" id="image">
