--- a/dino/dino.html
+++ b/dino/dino.html
@@ -10,17 +10,15 @@
     <link rel="stylesheet" href="dino.css">
 </head>
 <body>
-<header>
 
+<header>
     <div class="logo">
-        <img src="texture/logo.png" alt="Popcorn Icon" class="logo-img">
+        <img src="texture/logo.png" alt="Logo" class="logo-img">
     </div>
 
     <div class="home-button">
         <button class="home-button" onclick="goHome()" style="padding: 15px 30px; font-size: 1.5em;">Accueil</button>
     </div>
-
-
 </header>
 <div id="game">
 
@@ -28,9 +26,11 @@
         <span id="high-score">Hi: 0</span>
         <span id="current-score">Score: 0</span>
     </div>
+
     <img id="mario" src="texture/mario_marche.png" alt="Mario">
     <img id="goumba" src="texture/new_gomba.gif" alt="Goumba">
     <div id="ground"></div> <!-- sol -->
+
 </div>
 <script src="dino.js"></script>
 </body>
