refactor : le jeu est placé plus haut dans le game over

--- a/dino/gameover.html
+++ b/dino/gameover.html
@@ -60,13 +60,14 @@
             background-color: #fff;
             background-image: url('texture/fond_jeu.png');
             background-size: cover;
-            background-position: center;
+            background-position: top center;
             margin-top: 2vh;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
         }
+
 
         #ground {
             position: absolute;
