--- a/Accueil/accueil.html
+++ b/Accueil/accueil.html
@@ -36,9 +36,9 @@
             <h3>Contact : bit.storm@bitstorm.ch</h3>
         </div>
         <div class="social-icons">
-            <img class="logo" src="images/Instagram.png" alt="Logo Instagram">
-            <img class="logo" src="images/facebook.png" alt="Logo Facebook">
-            <img class="logo" src="images/Twiter.png" alt="Logo Twitter">
+            <a href="accueilContact.html"><img class="logo" src="images/Instagram.png" alt="Logo Instagram"></a>
+            <a href="accueilContact.html"><img class="logo" src="images/facebook.png" alt="Logo Facebook"></a>
+            <a href="accueilContact.html"><img class="logo" src="images/Twiter.png" alt="Logo Twitter"></a>
         </div>
     </div>
 </footer>
