--- a/Accueil/accueilDetailsTemplate.html
+++ b/Accueil/accueilDetailsTemplate.html
@@ -15,7 +15,7 @@
     <div>
         <img id="logo" src="../Assets/logo.png">
         <div id="title-slider" class="container">
-            <h1 id="title">Brique</h1>
+            <h1 id="title">Lomosq</h1>
         </div>
           
         <div>
