ajout lien + début boutton fonctionnel

--- a/Accueil/accueil.html
+++ b/Accueil/accueil.html
@@ -35,10 +35,13 @@
         <div class="contact">
             <h3>Contact : bit.storm@bitstorm.ch</h3>
         </div>
+        <div class="a_propos">
+            <a href="accueilContact.html"><h3>A propos de nous</h3></a>
+        </div>
         <div class="social-icons">
-            <a href="accueilContact.html"><img class="logo" src="images/Instagram.png" alt="Logo Instagram"></a>
-            <a href="accueilContact.html"><img class="logo" src="images/facebook.png" alt="Logo Facebook"></a>
-            <a href="accueilContact.html"><img class="logo" src="images/Twiter.png" alt="Logo Twitter"></a>
+            <img class="logo" src="images/Instagram.png" alt="Logo Instagram">
+            <img class="logo" src="images/facebook.png" alt="Logo Facebook">
+            <img class="logo" src="images/Twiter.png" alt="Logo Twitter">
         </div>
     </div>
 </footer>
