--- a/Flappy_bird/flappy_bird.html
+++ b/Flappy_bird/flappy_bird.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="flappy_bird.css" />
   </head>
   <body>
+    <audio autoplay loop>
+        <source src="textures\8bitmusicloop.mp3" type="audio/mpeg">
+    </audio>
     <!-- Background image field -->
     <img class="bgImage" src="textures\fond.png" alt="Background Image">
 
