liaison accueil avec

--- a/Accueil/accueilDetails2048.html
+++ b/Accueil/accueilDetails2048.html
@@ -29,7 +29,7 @@
                 </div>
                 <div id="buttons">
                     <div id="upperButtons">
-                        <button id="accueilButton" type="button" class="btn">Retour à l'accueil</button>
+                        <a href="accueil.html"><button id="accueilButton" type="button" class="btn">Retour à l'accueil</button></a>
                         <button id="nextButton" type="button" class="btn">Jeu suivant</button>
                     </div>
                     <div id="lowerButtons">
