--- a/Accueil/accueil.html
+++ b/Accueil/accueil.html
@@ -10,10 +10,10 @@
 
 <body>
     <div id="app">
-        <div class="header">
-            <a href="#"><img id="logo" src="images/logo.png" alt="logo BitStorm"></a>
+        <a href="#"><div class="header">
+            <img id="logo" src="images/logo.png" alt="logo BitStorm">
             <h1 id="titre">BITSTORM</h1>
-        </div>
+        </div></a>
         <div class="game-display">
             <game-display></game-display>
         </div>
