liaison de tout les fichiers

--- a/Accueil/accueilDetailsWordle.html
+++ b/Accueil/accueilDetailsWordle.html
@@ -30,10 +30,10 @@
                 <div id="buttons">
                     <div id="upperButtons">
                         <a href="accueil.html"><button id="accueilButton" type="button" class="btn">Retour à l'accueil</button></a>
-                        <button id="nextButton" type="button" class="btn">Jeu suivant</button>
+                        <a href="accueilDetails2048.html"><button id="nextButton" type="button" class="btn">Jeu suivant</button></a>
                     </div>
                     <div id="lowerButtons">
-                        <button id="playButton" type="button" class="btn">Play</button>
+                        <a href="../Wordle/wordle.html"><button id="playButton" type="button" class="btn">Play</button></a>
                     </div>
                 </div>
             </div>
