--- a/Flappy_bird/flappy_bird.html
+++ b/Flappy_bird/flappy_bird.html
@@ -15,7 +15,7 @@
     <img class="logo" src="textures\logo.png" alt="logo">
 
     <!-- Button at the top left -->
-    <button class="button" style="font-weight: bold">Accueil</button>
+    <a href="../Accueil/accueil.html"><button class="button" style="font-weight: bold">Accueil</button></a>
 
     <!-- Highlighted field on the right for adding elements -->
     <div class="rightPanel">
