--- a/Snake/snake.html
+++ b/Snake/snake.html
@@ -21,7 +21,7 @@
       <img src="../Assets/logo.png" id="image">
     </div>
     <div>
-      <button type="button" class="btn btn-primary" id="acceuil">Acceuil</button>
+      <a href="../Accueil/accueil.html"><button type="button" class="btn btn-primary" id="acceuil">Acceuil</button></a>
     </div>
      
   </div>
