--- a/dino/dino.html
+++ b/dino/dino.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="home-button">
-        <button class="home-button" onclick="goHome()" style="padding: 15px 30px; font-size: 1.5em;">Accueil</button>
+        <a href="../Accueil/accueil.html"><button class="home-button" onclick="goHome()" style="padding: 15px 30px; font-size: 1.5em;">Accueil</button></a>
     </div>
 </header>
 <div id="game">
